--- a/index.html
+++ b/index.html
@@ -67,10 +67,18 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./img/img1.jpg" alt="computer interface" /></li>
-          <li><img src="./img/img2.jpg" alt="mobile interface" /></li>
           <li>
-            <img src="./img/img3.jpg" alt="computer and mobile interface" />
+            <img src="./img/img1.jpg" alt="computer interface" width="360" />
+          </li>
+          <li>
+            <img src="./img/img2.jpg" alt="mobile interface" width="360" />
+          </li>
+          <li>
+            <img
+              src="./img/img3.jpg"
+              alt="computer and mobile interface"
+              width="360"
+            />
           </li>
         </ul>
       </section>
@@ -78,22 +86,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./img/foto1.jpg" alt="team member foto1" />
+            <img src="./img/foto1.jpg" alt="team member foto1" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./img/foto2.jpg" alt="team member foto2" />
+            <img src="./img/foto2.jpg" alt="team member foto2" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./img/foto3.jpg" alt="team member foto3" />
+            <img src="./img/foto3.jpg" alt="team member foto3" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./img/foto4.jpg" alt="team member foto4" />
+            <img src="./img/foto4.jpg" alt="team member foto4" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
